--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .s-main{
     width: 90%;
-    border: 2px solid red;
+    border:5px solid red;
     margin: 0 auto;
 }
 .a{
@@ -13,6 +13,10 @@
 .header-h{
     font-size: 30px;
     margin-left: 10px;
+    border-left: 5px solid tomato;
+}
+.header-h h1{
+    padding-left: 10px;
 }
 .a-left-div p{
  margin: 10px;
@@ -101,7 +105,7 @@ border-radius: 8px;
         width: 200px;
         display: inline-block;
         padding: 10px 20px;
-        background-color: brown;
+        background-color: #FF5959;
         text-decoration: none;
         text-align: center;
         margin: 15px;
@@ -131,7 +135,7 @@ border-radius: 8px;
         width: 200px;
         display: inline-block;
         padding: 10px 20px;
-        background-color: brown;
+        background-color: #FF5959;
         text-decoration: none;
         text-align: center;
         margin: 15px;
